--- a/Space.html
+++ b/Space.html
@@ -3,6 +3,25 @@
         <title>
             The Solar System
         </title>
-    </head>
     <link rel="stylesheet" href="space.css">
+    </head>
+
+</script>
 </html>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
