--- a/Space.html
+++ b/Space.html
@@ -5,12 +5,9 @@
         </title>
     <link rel="stylesheet" href="space.css">
     </head>
-
+    <img src="sun.jpg">
 </script>
 </html>
-
-
-
 
 
 
