--- a/space.html
+++ b/space.html
@@ -5,8 +5,10 @@
         </title>
     <link rel="stylesheet" href="space.css">
     </head>
+    <div class="planets">
     <img src="sun.jpg">
-</script>
+    hchgv
+</div>
 </html>
 
 
