--- a/space.html
+++ b/space.html
@@ -5,8 +5,14 @@
         </title>
     <link rel="stylesheet" href="space.css">
     </head>
-    <div class="planets">
-    <img src="sun.jpg">
+    <div class="title">
+<h1>
+The Solar System
+</h1>
+    </div>
+
+    <div class="main">
+    <img src="system.jpg">
     hchgv
 </div>
 </html>
