--- a/space.html
+++ b/space.html
@@ -11,9 +11,27 @@ The Solar System
 </h1>
     </div>
 
+    <script>
+        function Adult(){
+            document.body.style.backgroundImage="url(system1.jpg)";
+            document.body.style.color="white";
+            document.body.style.fontFamily="Arial";
+            document.getElementById('para').style.color="orange";
+        }
+
+        function Child(){
+            document.body.style.backgroundImage="url(system2.jpg)";
+            document.body.style.color="white";
+            document.body.style.fontFamily="Arial";
+            document.getElementById('para').style.color="orange";
+        }
+    
+
+    </script>
+<button type="button" onclick="Adult()">Adult</button>
+<button type="button" onclick="Child()">Child</button>
     <div class="main">
-    <img src="system.jpg">
-    yu
+        
 </div>
 </html>
 
