--- a/space.html
+++ b/space.html
@@ -6,6 +6,7 @@
     <link rel="stylesheet" href="space.css">
     </head>
 
+    <body>
     <div class="title">
 <h1>
 The Solar System
@@ -14,7 +15,7 @@ The Solar System
 
     <script>
         function Adult(){
-            document.body.style.backgroundImage="url(system.jpg)";
+            document.body.style.backgroundImage="url(system1.jpg)";
         }
 
         function Child(){
@@ -28,8 +29,15 @@ The Solar System
     </div>
 
     <div class="main">
-        
+        The Solar System is about 4.568 billion years old.
+         The Sun was formed by gravity pulling in many molecules.
+          It is mainly made of hydrogen, which it converts into helium through nuclear fusion.
+           The planets are in a orbiting disk.
+            This disk was partly left over from the cloud that formed the Sun, plus other material as the Sun moved through space.
+             Eventually, the gas and dust of the disk came together into planets.
+              It is thought that almost all stars and their planets form this way.
 </div>
+</body>
 </html>
 
 
