--- a/sign in.html
+++ b/sign in.html
@@ -45,7 +45,7 @@
             <form>
                 <label> Enter Your Name</label>
                 <br>
-                <input value="Enter Name" class="txtIn">
+                <input value="Enter Name" class="txtIn" id="Name">
                 <br>
                 <label>
                     Username:
