--- a/sign in.html
+++ b/sign in.html
@@ -8,7 +8,7 @@
             function Msg() {
                 const input_name=document.getElementById('Name');
                 const n=input_name.value;
-                const mssg=n.concat('you have been succesfully registered');
+                const mssg=n.concat(', you have been succesfully registered');
                 document.getElementById('showMsg').innerHTML=mssg;
             }
         </script>
