--- a/sign in.html
+++ b/sign in.html
@@ -8,7 +8,7 @@
             function Msg() {
                 const input_name=document.getElementById('Name');
                 const n=input_name.value;
-                const mssg=n.concat(', you have been succesfully registered');
+                const mssg=n.concat('You Have Been Succesfully Registered');
                 document.getElementById('showMsg').innerHTML=mssg;
             }
         </script>
@@ -45,13 +45,13 @@
             <form>
                 <label> Enter Your Name</label>
                 <br>
-                <input value="Enter Name" class="txtIn" id="Name">
+                <input placeholder="Enter Name" class="txtIn" id="Name">
                 <br>
                 <label>
                     Username:
                 </label>
                 <br>
-                <input value="Enter Username" class="txtIn">
+                <input placeholder="Enter Username" class="txtIn">
                 <br>
                 <label>
                     Password:
