--- a/asian.html
+++ b/asian.html
@@ -4,11 +4,14 @@
             Asian Heritage Month
         </title>
     </head>
+    <link rel="stylesheet" href="asian.css">
+    <body>
     <div class="head">
         <img class="logo" src="asian_logo.png">
         <h1 class="text">
             Asian Heritage Month
         </h1>
+        <img class="logo" src="asian_logo.png">
         </div>
         
         <nav class="nav">
@@ -16,7 +19,7 @@
         <ul>
         
         <li>
-        <a href="">
+        <a href="http://127.0.0.1:3000/asian.html">
         Homepage
         </a>
         </li>
@@ -53,65 +56,25 @@
 
         </ul>
         </nav>
+
+        <div class="homepagebody">
+Asian Heritage Month is for us to learn more about the diverse culture and history of Asian communities in Canada,
+as well as to acknowledge the many achievements and contributions of people of Asian origin who, throughout our history,
+have done so much to make Canada the country we know and love.
+The theme for Asian Heritage Month 2024 is “Preserving the Past, 
+Embracing the Future: Amplifying Asian Canadian Legacy”.
+This theme celebrates the rich heritage and contributions of people of Asian origin in Canada while also looking forward to the future with optimism and hopefulness.
+We are acknowledging the voices, stories, and achievements of people of Asian origin in Canada and recognizing their contributions to all aspects of our society, 
+including the arts,sports and social justice.
+<p align="center">
+    <a href="https://www.canada.ca/en/canadian-heritage/campaigns/asian-heritage-month.html">
+Source
+    </a>
+</p>
+</div>
+
+</body>
 </html>
 
 
 
-<style>
-body {
-background-color: #73833b86;
-margin: 0px;
-}
-
-.head
-{
-font-size: 20px;
-display: inline-block;
-}
-
-
-.text
-{
-color: white;
-text-shadow: 3px 3px 5px rgb(0, 0, 0);
-margin: 0px 0px 0px 60px;
-display: inline-block;
-text-align: center;
-}
-
-.logo
-{
-width: 20%;
-display: inline-block;
-vertical-align: middle;
-}
-
-
-.nav ul
-{
-list-style-type: none;
-background-color: #c8d363b7;
-overflow: hidden;
-position: sticky;
-}
-
-.nav a
-{
-text-shadow: 3px 3px 5px rgb(0, 0, 0);
-color: rgb(255, 255, 255);
-text-decoration: none;
-padding: 15px;
-display: block;
-text-align: center;
-}
-
-.nav a:hover
-{
-background-color: #73833b86;
-}
-
-.nav li
-{
-float: left;
-}
-</style>
