--- a/timline.html
+++ b/timline.html
@@ -61,7 +61,7 @@
 
             <script>
                 function event1(){
-                    document.getElementById("vghkfhgkfu").innerText="monkey";
+                    document.getElementById("vghkfhgkfu").innerText="Between 1881 and 1884, over 17,000 Chinese immigrants arrived in Canada to build the Canadian Pacific Railway, and later to maintain it. Several thousand came from the coastal areas of the United States where they had helped to build the American transcontinental railroad, but the majority arrived directly from southern China. The province of British Columbia already had a sizeable Chinese population, and racism towards the Chinese community was widespread. The media of the time often portrayed Chinese cultural practices such as clothing styles, living conditions, and even funeral rites, in a degrading way.";
                 }
 
 
@@ -70,7 +70,7 @@
             </script>
 
             <div class="buttons">
-                <button type="button" onclick="event1()">....</button>
+                <button type="button" onclick="event1()">Canadian Pasific Railway</button>
                 </div>
 
                     <p align="center" id="vghkfhgkfu">
