--- a/asian/asian.html
+++ b/asian/asian.html
@@ -21,13 +21,13 @@
         <ul>
         
         <li>
-        <a href="http://127.0.0.1:3000/asian.html">
+        <a href="http://127.0.0.1:3000/asian/asian.html">
         Homepage
         </a>
         </li>
         
         <li>
-        <a href="http://127.0.0.1:3000/timline.html">
+        <a href="http://127.0.0.1:3000/asian/timline.html">
         About Asian Immigration in Canada
         </a>
         </li>
