--- a/Caculator/caculator.html
+++ b/Caculator/caculator.html
@@ -1,9 +1,12 @@
 <html>
     <head>
-        <tittle>
-            Caculator
-        </tittle>
+        <title>
+            Calculator
+        </title>
     </head>
+
+    <link rel="stylesheet" href="caculator.css">
+
     <script>
 
 function findSum(){
@@ -13,55 +16,89 @@ var num1=parseFloat(document.getElementById("n1").value);
 var num2=parseFloat(document.getElementById("n2").value);
 
 num3=num1+num2;
-num4=num1-num2;
-num5=num1*num2;
-num6=num1/num2;
 
 document.getElementById("ans").innerHTML=num3;
+}
+
+function findSum2(){
+
+var num1=parseFloat(document.getElementById("n1").value);
+
+var num2=parseFloat(document.getElementById("n2").value);
+
+num4=num1-num2;
+
 document.getElementById("ans").innerHTML=num4;
+}
+
+function findSum3(){
+
+var num1=parseFloat(document.getElementById("n1").value);
+
+var num2=parseFloat(document.getElementById("n2").value);
+
+num5=num1*num2;
+
 document.getElementById("ans").innerHTML=num5;
+}
+
+function findSum4(){
+
+var num1=parseFloat(document.getElementById("n1").value);
+
+var num2=parseFloat(document.getElementById("n2").value);
+
+num6=num1/num2;
+
 document.getElementById("ans").innerHTML=num6;
 }
+
+function findSum5(){
+
+document.getElementById("ans").innerHTML="";
+}
+
 </script>
-
-
 <body>
+
+<div class="body">
 
 <h1>
 Calulator
 </h1>
 
 Enter first number:
-<input type="text" id="n1"><br><br>
+<input type="number" id="n1"><br><br>
 
 Enter second number:
-<input type="text" id="n2"><br><br>
+<input type="number" id="n2"><br><br>
 
 <input type="button" value="Add" onclick="findSum()">
-<label> Your answer is: </label>
-<label id="ans"></label>
+
+<input type="button" value="Subtract" onclick="findSum2()">
+
+<input type="button" value="Multiply" onclick="findSum3()">
+
+<input type="button" value="Divide" onclick="findSum4()">
+
+<input type="button" value="Clear" onclick="findSum5()">
 
 <br>
-<input type="button" value="Add" onclick="findSum()">
-<label> Your answer is: </label>
+<label> Answer: </label>
 <label id="ans"></label>
+</div>
 
-<br>
-<input type="button" value="Add" onclick="findSum()">
-<label> Your answer is: </label>
-<label id="ans"></label>
+<div class="empty">
 
-<br>
-<input type="button" value="Add" onclick="findSum()">
-<label> Your answer is: </label>
-<label id="ans"></label>
+</div>
 
-<style>
+<div class="grass">
+    <img src="b.png">
+    <img src="bas.png">
+    <img src="se.png" style="margin: 0px 0px 0px 150px;">
+    <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
+</div>
 
-body {
-background-color: lightblue;
-}
-</style>
 </body>
 </html>
 
