--- a/Caculator/caculator.html
+++ b/Caculator/caculator.html
@@ -112,9 +112,9 @@ Enter second number:
 
 <div class="grass">
     <img src="b.png">
-    <img src="bas.png">
+    <img src="bas.png" style="width: 10%;">
     <img src="se.png" style="margin: 0px 0px 0px 150px;">
-    <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
+    <br><br><br><br><br>
 </div>
 
 </body>
